# SoC_ZYNQ

./: README.md
Vitis/: README.md
Vitis/drivers/axi_cpwm8c_v1_0/src/: CMakeLists.txt  xcpwm8c.c  xcpwm8c.h  xcpwm8c_documented.h  xcpwm8c_l.h  xcpwm8c_sint.c
Vitis/drivers/axi_dec3lxnpc_v1_0/src/: CMakeLists.txt  xdec3lxnpc.c  xdec3lxnpc.h
Vitis/petalinux/: README.md
Vitis/project/: test_1.tcl
Vitis/projects/: .gitignore  README.md  SWAMP_Zedboard_test_decxnpc.tcl  SW_Zedboard_test_amp.tcl  SW_Zedboard_test_cdma.py  SW_Zedboard_test_cdma__24p1.py  SW_Zedboard_test_decxnpc.tcl  SW_Zedboard_testpwm.tcl  _VITIS_PROJECT_GENERATOR.bat  dfx_runtime.txt  migrate.py  test_1.tcl  test_2.tcl  test_zedboard.tcl  test_zedboard2.tcl  test_zedboard_2023.tcl  vitis_journal.py  vitis_journal.py~
Vitis/src/: hdfcpwm.c  hdfcpwm.h  helloworld.c  main.c  xcpwm6b.c  xcpwm6b.h
Vivado/ip_repo/: CMakeLists.txt  README.md  _driver.yaml
Vivado/projects/: .gitignore  HW_Zedboard_test25.tcl  HW_Zedboard_test_cdma.tcl  HW_Zedboard_test_decxnpc.tcl  HW_Zedboard_testpwm.tcl  README.md  _PROJECT_GENERATOR.bat  _VIVADO25_PROJECT_GENERATOR.bat  _VIVADO_PROJECT_GENERATOR.bat  cpwm8c_zynq_7020.tcl  pwm_zynq_ax7020.tcl  test_zedboard.tcl  test_zedboard_2023.tcl
Vivado/xsa_hardware/: .gitignore  CPWM_6b_hardware_1.xsa  CPWM_6b_hardware_intc_edge.xsa  HW_Zedboard_test_cdma.xsa  HW_Zedboard_test_decxnpc.xsa  HW_Zedboard_testpwm.xsa  cpwm8_1_wrapper__zedboard.xsa  cpwm8c_1_wrapper.xsa  cpwm8c_gpio__zedboard.xsa  (+4 more)
_hdl_checker/: cache.json
extras/: Linux Console.vi  default.dwf3work
(+340 files in other folders)
