# SPDX-License-Identifier: MIT
cmake_minimum_required(VERSION 3.15)

project(axi_cpwm8c)
find_package(common)
collector_create (PROJECT_LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}")
collector_create (PROJECT_LIB_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}")
include_directories(${CMAKE_BINARY_DIR}/include)
collect (PROJECT_LIB_SOURCES xcpwm8c.c)
collect (PROJECT_LIB_HEADERS xcpwm8c.h)
collect (PROJECT_LIB_SOURCES xcpwm8c_g.c)
collector_list (_sources PROJECT_LIB_SOURCES)
collector_list (_headers PROJECT_LIB_HEADERS)
file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
add_library(axi_cpwm8c STATIC ${_sources})
set_target_properties(axi_cpwm8c PROPERTIES LINKER_LANGUAGE C)